<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BluetoothActivity" >

    <TextView
        android:id="@+id/titleTextBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:drawableStart="@drawable/baseline_info_white_18"
        android:drawableEnd="@drawable/baseline_info_white_18"
        android:elevation="10dp"
        android:focusable="true"
        android:gravity="center"
        android:onClick="onAbout"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/pairedDevicesTextBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@android:color/white"
        android:elevation="10dp"
        android:gravity="center"
        android:text="@string/paired_devices"
        android:textColor="@android:color/black" />

    <ScrollView
        android:id="@+id/pairedDevicesScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@android:color/darker_gray"
        android:scrollbarFadeDuration="0">

        <LinearLayout
            android:id="@+id/pairedDevicesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/discoveredDevicesTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:background="@android:color/white"
        android:clickable="true"
        android:drawableStart="@drawable/baseline_autorenew_black_18"
        android:drawableEnd="@drawable/baseline_autorenew_black_18"
        android:elevation="10dp"
        android:focusable="true"
        android:gravity="center"
        android:onClick="onRefresh"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/discovered_devices"
        android:textColor="@android:color/black" />

    <ScrollView
        android:id="@+id/discoveredDevicesScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@android:color/darker_gray"
        android:scrollbarFadeDuration="0">

        <LinearLayout
            android:id="@+id/discoveredDevicesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@color/colorPrimary"
        android:elevation="10dp">

        <Button
            android:id="@+id/connect"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@id/midFrame"
            android:enabled="false"
            android:onClick="onConnect"
            android:text="@string/connect"
            android:textColor="@color/custom_button_colors" />

        <FrameLayout
            android:id="@+id/midFrame"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@android:color/black">

        </FrameLayout>

        <Button
            android:id="@+id/control"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/midFrame"
            android:enabled="false"
            android:onClick="onControl"
            android:text="@string/control"
            android:textColor="@color/custom_button_colors" />
    </RelativeLayout>
</LinearLayout>